--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
+
 <html lang="en-us">
+
 <head>
   <meta charset="UTF-8">
-  <title>Activity 1: Basic HTML Bio</title>
+    <title>My First Web Page!</title>
 </head>
+<h1>This is my Page!</h1>
 
 <body>
+    <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHG8dt7wh47Zw/profile-displayphoto-shrink_200_200/0?e=1595462400&v=beta&t=g_vKDQB_cjE7QhAa1e89aAYxcY_sHMlMr2vcvwL_UKQ" alt="This is my Photo"> 
+
+<br/>
+<strong>This page is a set up to describe a little bit about myself and how I am going to set up my own webpage.</strong>
+<br/>
+<strong>My name is Steven Salguero. I currently live in Denver, Colorado and work in Financial Services. I graduated from SUNY Albany in New York.</strong>
+
+<ul>
+  <li><a href="www.linkedin.com/in/steven-salguero-05130063">Linkedin</li>
+    <li><a href="www.instagram.com">Instagram</li>
+    <li><a href="twitter">Twitter</li>
+  </ul> 
+
+  <br/>
+
+  <table>
+    <tr>
+      <th>Favorite Movie</th>
+      <th>Favorite Songs</th>
+      <th>Favorite Activities</th>
+    </tr>
+    <tr>
+      <td>The Matrix</td>
+      <td>Any Hip Hop Song</td>
+      <td>Hiking</td>
+    </tr>
+  </table> 
+
+  
+
 
 </body>
+
 
 </html>
